cmake_minimum_required(VERSION 3.9)
project(OSproject2)

set(CMAKE_CXX_STANDARD 11)

add_executable(OSproject2
        OSproject2/analcatdata/AIDS.csv
        OSproject2/analcatdata/anscombe.csv
        OSproject2/analcatdata/apnea1.csv
        OSproject2/analcatdata/apnea2.csv
        OSproject2/analcatdata/apnea3.csv
        OSproject2/analcatdata/asbestos.csv
        OSproject2/analcatdata/assessment.csv
        OSproject2/analcatdata/authorship.csv
        OSproject2/analcatdata/bankruptcy.csv
        OSproject2/analcatdata/beetles.csv
        OSproject2/analcatdata/benford.csv
        OSproject2/analcatdata/birthday.csv
        OSproject2/analcatdata/bondrate.csv
        OSproject2/analcatdata/boxing1.csv
        OSproject2/analcatdata/boxing2.csv
        OSproject2/analcatdata/braziltourism.csv
        OSproject2/analcatdata/broadway.csv
        OSproject2/analcatdata/broadwaymult.csv
        OSproject2/analcatdata/cancerrate.csv
        OSproject2/analcatdata/chall101.csv
        OSproject2/analcatdata/chall2.csv
        OSproject2/analcatdata/challenger.csv
        OSproject2/analcatdata/chlamydia.csv
        OSproject2/analcatdata/creditscore.csv
        OSproject2/analcatdata/currency.csv
        OSproject2/analcatdata/cyyoung8092.csv
        OSproject2/analcatdata/cyyoung9302.csv
        OSproject2/analcatdata/devils.csv
        OSproject2/analcatdata/dmft.csv
        OSproject2/analcatdata/donner.csv
        OSproject2/analcatdata/draft.csv
        OSproject2/analcatdata/election2000.csv
        OSproject2/analcatdata/enrollment.csv
        OSproject2/analcatdata/esr.csv
        OSproject2/analcatdata/famufsu.csv
        OSproject2/analcatdata/floridashark.csv
        OSproject2/analcatdata/fraud.csv
        OSproject2/analcatdata/galapagos.csv
        OSproject2/analcatdata/germangss.csv
        OSproject2/analcatdata/gmat.csv
        OSproject2/analcatdata/gsssexsurvey.csv
        OSproject2/analcatdata/gviolence.csv
        OSproject2/analcatdata/halloffame.csv
        OSproject2/analcatdata/happiness.csv
        OSproject2/analcatdata/hiroshima.csv
        OSproject2/analcatdata/hivcd4cd8.csv
        OSproject2/analcatdata/hivtrans1.csv
        OSproject2/analcatdata/hivtrans2.csv
        OSproject2/analcatdata/homerun.csv
        OSproject2/analcatdata/hurricanes.csv
        OSproject2/analcatdata/impeach.csv
        OSproject2/analcatdata/japansolvent.csv
        OSproject2/analcatdata/kotzehawk.csv
        OSproject2/analcatdata/lalottery.csv
        OSproject2/analcatdata/lawsuit.csv
        OSproject2/analcatdata/lda.csv
        OSproject2/analcatdata/mapleleafs.csv
        OSproject2/analcatdata/marketing.csv
        OSproject2/analcatdata/menarche.csv
        OSproject2/analcatdata/michiganacc.csv
        OSproject2/analcatdata/mines.csv
        OSproject2/analcatdata/ncaa.csv
        OSproject2/analcatdata/neavote.csv
        OSproject2/analcatdata/negotiation.csv
        OSproject2/analcatdata/olympic2000.csv
        OSproject2/analcatdata/ossification.csv
        OSproject2/analcatdata/randomgen.csv
        OSproject2/analcatdata/README
        OSproject2/analcatdata/reviewer.csv
        OSproject2/analcatdata/runshoes.csv
        OSproject2/analcatdata/seropositive.csv
        OSproject2/analcatdata/sexpartners.csv
        OSproject2/analcatdata/shampoo.csv
        OSproject2/analcatdata/soccer.csv
        OSproject2/analcatdata/supreme.csv
        OSproject2/analcatdata/titanic.csv
        OSproject2/analcatdata/tornado.csv
        OSproject2/analcatdata/uklottery.csv
        OSproject2/analcatdata/uktrainacc.csv
        OSproject2/analcatdata/vehicle.csv
        OSproject2/analcatdata/vineyard.csv
        OSproject2/analcatdata/votesurvey.csv
        OSproject2/analcatdata/whale.csv
        OSproject2/analcatdata/wildcat.csv
        OSproject2/analcatdata/winterolympic.csv
        OSproject2/csvparser.c
        OSproject2/csvparser.h
        OSproject2/thread_sched.c
        OSproject2/thread_sched.h
        OSproject2/thread_tasks.c
        OSproject2/thread_tasks.h
        README.md OSproject2/linkedlist.c OSproject2/linkedlist.h)
